# VaangoUI

./: .gitignore  .gitmodules  README.md  index.html  package.json  tetgen.js  tsconfig.json  webpack.config.js
DearPyGui/gui_app/: CAD_3D_Viewer.ini  app.py  app_state.py  callbacks.py  main.py  requirements.txt  viewer_3d.py
Javascript/: .eslintrc.js  LICENSE  package.json
Javascript/docs/: including_js_files.md
Javascript/src_typescript/: package.json
Javascript/translated_java_code/: DifferenceGeomPiece.ts  DisplayPartDistFrame.ts  DisplayParticleLocPanel.ts  DistanceFunction.ts  GeometryPanel.ts  HelpAboutFrame.ts  IntegerField.ts  IntegerVectorField.ts  KdNode.ts  LightWeightCanvas.ts  MPMMaterialsPanel.ts  MaxHeap.ts  NearestNeighborIterator.ts  Packing.ts  ViscoSCRAMMaterialPanel.ts
Prototype/glad/: glad.c
Prototype/src/: CMakeLists.txt  Vaango_UI.cc  Vaango_UIApplication.cc  Vaango_UIApplication.h  Vaango_UIBase.cc  Vaango_UIBase.h  Vaango_UIComponentBase.cc  Vaango_UIComponentBase.h  Vaango_UIConsolePanel.h  Vaango_UICreateParticleMainPanel.h  Vaango_UIData.cc  Vaango_UIData.h  Vaango_UIDisplayPartDistPanel.h  Vaango_UIEngineeringViewsComponent.h  Vaango_UIEnvironment.cc  Vaango_UIEnvironment.h  Vaango_UIGenerateParticlesPanel.cc  Vaango_UIGenerateParticlesPanel.h  Vaango_UIGenerateRVEParticles.cc  Vaango_UIGenerateRVEParticles.h  Vaango_UIICEFlagsNode.h  Vaango_UIInputPartDistPanel.h  Vaango_UILayout.cc  Vaango_UILayout.h  Vaango_UIMPMFlagsNode.h  Vaango_UIMainMenuComponent.h  Vaango_UINodesComponent.h  Vaango_UIOcctWindow.cc  Vaango_UIOcctWindow.h  Vaango_UIOutputInformationNode.h  Vaango_UIPanelBase.h  Vaango_UIParticleSizeHistogramCanvas.h  Vaango_UIPhysicalConstantsNode.h  Vaango_UITestComponent.h  Vaango_UITimeIntegrationNode.h  Vaango_UIUtils.h  toolchain.cmake
Prototype/src/Core/: Edge.cc  Edge.h  Enums.h  Face.cc  Face.h  ParticleInRVE.h  ParticleSizeDist.h  ParticlesInRVE.h  Point.h  Polygon.h  Vertex.cc  Vertex.h  Voronoi.cc  Voronoi.h
Prototype/src/UnitTests/: CMakeLists.txt  settings.ini  test_ParticleInRVE.cc  test_UIConsole.cc  test_UIEnvironment.cc  test_UILayout.cc
Prototype/src/Utils/: CMakeLists.txt  SearchUtils.h  UtilsGoBag.h  Vaango_SettingsParser.h  json2xml.hpp  nanoflann.hpp
Prototype/src/Utils/UnitTests/: CMakeLists.txt  parser_test.cc
Pyside6/: CMakeLists.txt  gl_test.py  gl_test1.py  gl_test2.py  gl_test3.py  gl_test4.py  gl_test5.py  main.py  main_qt6_orig.cpp  nurbs_test1.py  pyproject.toml  pyramid.cpp  pyramid.py  pyramid1.py  pyramid1_dbg.py  pyramid_gizmo.cpp  pyramid_scroll.cpp  pyramid_scroll.py  test.py  test2.py
Pyside6/gui_app/: app.py  main.py  quickstart.md  readme.md  requirements.txt  viewer_3d.py
Pyside6/gui_app/nodes/: __init__.py  base_node.py  import_geometry.py  mesh_clean.py  other_nodes.py
Pyside6/gui_app/widgets/: node_editor.py
Pyside6/pyside6/: main.py
Pyside6/pyside6/UPS_SPEC/: create_ups_classes.py  main_ups_gui.py  ups_spec_models.py
Pyside6/pyside6/assets/: V2_2_-68.90_-22.28.tif  convert_tif.py  convert_tif_xarray.py  dxf_viewer.py  geotiff_plot.ipynb  geotiff_to_stl.py  kmz_viewer.py  logfile.txt  output_hh.tif  output_hh_surf.stl  viz.hh_hillshade.kmz  viz.hh_hillshade.tif
Pyside6/pyside6/vaango_ui/: __init__.py  core.py  generator.py  input_part_dist.py  main_window.py  node_editor.py  nodes_component.py  panels.py  particle_size_histogram.py  particle_utils.py  visualization.py  viz_pyvista.py
Pyside6/pyside6/vaango_ui/geomutils/: BUILD_NOTES.md  create_points_axis_aligned.py  create_points_random.py  points_cpp.cpp  points_cpp_pybind.cpp
Pyside6/pyside6/vaango_ui/io/: stl_reader.py  test_pyvista.py
Pyside6/pyside6/vaango_ui/nodes/: __init__.py  domain.py  geometry_stl.py  ice_flags.py  mpm_flags.py  output_information.py  physical_constants.py  simulation_component.py  time_integration.py
Pyside6/pyside6/vaango_ui/widgets/: node_editor.py  node_palette.py  property_editor.py
Pyside6/pyside6_java/vaango_ui/: create_geom_piece_panel.py  display_geometry_frame.py  display_particle_3d_frame.py  fields.py  general_inputs_panel.py  geom_object.py  geom_pieces.py  geometry_panel.py  input_geometry_panel.py  pair.py  particle.py  particle_generate_panel.py  particle_list.py  particle_size.py  placeholders.py  point.py  polygon_double.py  test.ups  time_input_panel.py  uintah_gui.py  uintah_input_panel.py  variable_save_input_panel.py  vector3d.py  voronoi.py
Qt6_cpp/: CMakeLists.txt  main_qt6_3d.cpp  pyramid_mouse.cpp  pyramid_sel.cpp
algorithm_tests/: testRotation.m
assets/: VaangoUI.js
assets/css/: screen.css  sidebar.css
assets/data/: deposit_particle_000.vtu
assets/libs/: vtk.js
assets/src/: BinaryHeap.js  BoxGeomPiece.js  BoxGeomPiecePanel.js  CircleToCircleDistanceFunction.js  CompNeoHookMaterialPanel.js  ComputeParticleLocPanel.js  CreateGeomObjectPanel.js  CreateGeomPiecePanel.js  CylinderGeomPiece.js  DecimalField.js  DecimalVectorField.js  DifferenceGeomPiece.js  DisplayGeometryFrame.js  DisplayGeometryPanel.js  DisplayPartDistFrame.js  DisplayPartDistPanel.js  DisplayParticleLocFrame.js  GeomObject.js  (+57 more)
docs/: three-trackballcontrols.md
src/: VaangoUI.js  VaangoUI.ts
src_typescript/: package.json  webpack.config.js
translated_java_code/: BinaryHeap.ts  BoxGeomPiece.ts  BoxGeomPiecePanel.ts  CreateGeomObjectPanel.ts  CreateGeomPiecePanel.ts  DecimalField.ts  DecimalVectorField.ts  DisplayGeometryFrame.ts  DisplayGeometryPanel.ts  DisplayParticleLocFrame.ts  ElasticPlasticMaterialPanel.ts  GeomObject.ts  GeomObjectPanel.ts  GridBCPanel.ts  HypoElasticMaterialPanel.ts  ICEInputsPanel.ts  ICEMaterialInputPanel.ts  ICEMaterialsPanel.ts  InputGeometryPanel.ts  InputPartDistPanel.ts  MPMContactInputPanel.ts  MPMICEExchangePanel.ts  MinHeap.ts  ParticleGeneratePanel.ts  ParticleList.ts  ParticleSize.ts  ParticleSizeDistInputPanel.ts  Point.ts  PolygonDouble.ts  SmoothCylGeomPiece.ts  SmoothSphereGeomPiece.ts  SphereGeomPiece.ts  SphereToSphereDistanceFunction.ts  UintahInputPanel.ts  UnionGeomPiece.ts  Voronoi.ts  WholeNumberField.ts  package-info.ts
(+285 files in other folders)
